# SRdisplay

./: README.md
3D-Print/: Baseplate.stl  Basis.stl  Case.3mf  Dichtung.stl  ESP-Case.stl  ESP-Deckel.stl  Mutter.stl  Überwurfmutter.stl
Display/SR_SoC-Display/: FT3168.cpp  SR_SoC-Display.ino  a_EEPROM.ino  a_KilometerCalc.ino  a_ParseSerial.ino  a_RTC.ino  a_copy ui.bat  a_http.ino  a_lv_disp.ino  a_mqtt.ino  a_smartplug.ino  a_wifi.ino  lcd.c  lcd.h  lcd_config.h  parse_serial_all.py  partitions.csv  ui.c  ui.h  ui_Ladeanzeige.c  ui_SRInfo.c  ui_Settings.c  ui_Tacho.c  ui_WiFiInfo.c  ui_comp_hook.c  ui_events.h  ui_font_ArialMed.c  ui_helpers.c  ui_helpers.h  ui_img_1045174431.c  ui_img_133863867.c  ui_img_1435283132.c  ui_img_1569223354.c  ui_img_1767220752.c  ui_img_374202920.c  ui_img_400979676.c  ui_img_517647767.c  ui_img_602373867.c  ui_img_798314644.c  ui_img_secondride_diagnose_png.c  (+9 more)
Display/SR_SoC-Display/ui/: CMakeLists.txt  filelist.txt
Display/SquareLine/: SR_SoC-Display.sll  SR_SoC-Display.spj  SR_SoC-Display_events.py  SquareLine_Project.sll  SquareLine_Project.spj  Themes.slt
Display/SquareLine/assets/: ui_font_ArialBig.c  ui_font_ArialBig.fcfg  ui_font_ArialMed.fcfg
Display/SquareLine/examples/3d_printer/: 3d_printer.sll  3d_printer.spj
Display/SquareLine/examples/ebike_demo/: ebike_demo.sll  ebike_demo.spj
Display/SquareLine/examples/ebike_demo/components/: Dropdown.ecomp  Roller.ecomp
USB-Wandler/cdc_acm_host/cdc_acm_host/: sdkconfig  sdkconfig.old
USB-Wandler/cdc_acm_host/cdc_acm_host/main/: usb_cdc_example_main.c
(+17 files in other folders)
